--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <img  id="bulb" src="./img/bulb-off.png" alt="">
+        <img  id="bulb" src="./img/bulb-on.png" alt="">
       <button id="switch">Turn On</button>
     </div>
     
